# CongFung

./: .gitignore  CMakeLists.txt  hiddenareadialog.cpp  hiddenareadialog.h  hiddenareadialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingdialog.ui  taskresult.cpp  taskresult.h  taskresult.ui  worker.cpp  worker.h
structs/: block.h  hiddenAreas.h  megadisk.h  task.h
tools/: blocksinfo.cpp  blocksinfo.h  clicommand.cpp  clicommand.h  megaclihandler.cpp  megaclihandler.h  task_metadata.cpp  task_metadata.h
